--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "huebit",
   "version": "0.0.0",
   "description": "Command line colors for NodeJS",
-  "main": "index.js",
+  "main": "lib/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
